Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-20117

sanity test_27X: @@@@@@ FAIL: migrate failed

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Medium Medium
    • Lustre 2.18.0
    • Lustre 2.18.0
    • None
    • 3
    • 9223372036854775807

      This issue was created by maloo for Xiao Yang <xyang@ddn.com>

      This issue relates to the following test suite run: https://testing.whamcloud.com/test_sets/6db15a8d-eacc-4bc9-a297-48c4e48c68ed

      Test session details:
      clients: https://build.whamcloud.com/job/lustre-reviews/123699 - 6.8.0-85-generic
      servers: https://build.whamcloud.com/job/lustre-reviews/123699 - 4.18.0-553.111.1.el8_lustre.x86_64

      == sanity test 27X: lfs migrate honors --overstripe-count option ========================================================== 21:06:16 (1775855176)
      1+0 records in
      1+0 records out
      1024 bytes (1.0 kB, 1.0 KiB) copied, 0.00323246 s, 317 kB/s
      error: lfs migrate: /mnt/lustre/f27X.sanity: cannot swap layout: Protocol error
      sanity test_27X: @@@@@@ FAIL: migrate failed
      Trace dump:
      = /usr/lib64/lustre/tests/test-framework.sh:7400:error()
      = /usr/lib64/lustre/tests/sanity.sh:3778:test_27X()
      = /usr/lib64/lustre/tests/test-framework.sh:7776:run_one()
      = /usr/lib64/lustre/tests/test-framework.sh:7839:run_one_logged()
      = /usr/lib64/lustre/tests/test-framework.sh:7654:run_test()
      = /usr/lib64/lustre/tests/sanity.sh:3792:main()
      Dumping lctl log to /autotest/autotest-2/2026-04-10/lustre-reviews_review-ldiskfs-ubuntu_123699_70_c30318de-f4d3-4c84-a062-8349f705837d//sanity.test_27X.*.1775855178.log
      CMD: trevis-153vm72.trevis.whamcloud.com,trevis-153vm73,trevis-153vm74,trevis-153vm75 /usr/sbin/lctl dk > /autotest/autotest-2/2026-04-10/lustre-reviews_review-ldiskfs-ubuntu_123699_70_c30318de-f4d3-4c84-a062-8349f705837d//sanity.test_27X.debug_log.\$(hostname -s).1775855178.log;
      dmesg > /autotest/autotest-2/2026-04-10/lustre-reviews_review-ldiskfs-ubuntu_123699_70_c30318de-f4d3-4c84-a062-8349f705837d//sanity.test_27X.dmesg.\$(hostname -s).1775855178.log

            eaujames Etienne Aujames
            maloo Maloo
            Votes:
            0 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved: