LU-20117 mdc: fix RMF_SWAP_LAYOUTS packing

Calling req_capsule_set_size() after ptlrpc_request_pack() does not
update buffer offsets. So writing "struct mdc_swap_layouts" in
mdc_ioc_swap_layouts() can overwrite data set by mdc_prep_elc_req().

Test-Parameters: testlist=sanity
Test-Parameters: testlist=sanity env=ONLY=27
Test-Parameters: testlist=sanity env=ONLY=27
Test-Parameters: testlist=sanity env=ONLY=27X,ONLY_REPEAT=50
Test-Parameters: testlist=sanity clientversion=2.17 env=ONLY="27 56"
Test-Parameters: testlist=sanity serverversion=2.17 env=ONLY="27X 56"
Fixes: 529ea457da30 ("LU-5896 mdt: allow clients with old mdc_swap_layouts")
Signed-off-by: Etienne AUJAMES <eaujames@ddn.com>
Change-Id: Ic9e908c043f0c45900c75907d78acd4f4ec1c664
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/65343
Reviewed-by: Oleg Drokin <green@whamcloud.com>
Reviewed-by: Guillaume Courrier <guillaume.courrier@cea.fr>
Reviewed-by: Shaun Tancheff <shaun.tancheff@hpe.com>
Tested-by: jenkins <devops@whamcloud.com>
Tested-by: Maloo <maloo@whamcloud.com>
Reviewed-by: George Zhao <georgezhaojobs@gmail.com>
Reviewed-by: Andreas Dilger <adilger@thelustrecollective.com>